# XRCrawler

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.backup  README.md  biome.json  cli.js  cli.ts  docker-compose.yml  entrypoint.sh  fly.toml  jest.config.js  lefthook.yml  output  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  scrape-unified.js  scrape-unified.ts  server.js  server.ts  test-db-integration.ts  tsconfig.json  worker.ts  x.com_cookies_1.txt  x.com_cookies_2.txt  x.com_cookies_3.txt
cmd/: cli.ts  start-server.ts  start-worker.ts
config/: constants.ts
cookies/: account1.json  account2.json  account3.json
core/: advanced-fingerprint.ts  anti-detection.ts  browser-manager.ts  browser-pool.ts  cookie-manager.js  cookie-manager.ts  data-extractor.ts  env.ts  error-classifier.ts  error-snapshotter.ts  error-utils.ts  errors.ts  evasion.ts  event-bus.ts  fingerprint-manager.ts  human-behavior.ts  index.ts  metrics-collector.ts  monitor-service.ts  navigation-service.ts  performance-monitor.ts  progress-manager.ts  proxy-manager.ts  rate-limit-manager.ts  rate-limit.ts  rate-limiter.ts  reddit-api-client.ts  request-queue.ts  scrape-unified.ts  scraper-dependencies.ts  scraper-engine.ts  scraper-engine.types.ts  session-manager.ts  stop-signal.ts  timeline-api-runner.ts  timeline-date-chunker.ts  timeline-dom-runner.ts  x-api.ts  xclid-puppeteer.ts  xclid.ts
docs/: API_REFERENCE.md  BUN_MIGRATION_PLAN.md  BUTTON_CLICK_FIX.md  CLI_USAGE.md  FAQ.md  (+7 more)
wasm/url-normalizer/: Cargo.toml
wasm/url-normalizer/src/: lib.rs
(+204 files in other folders)
